# differentiable-swift-examples

./: .gitignore  .swift-format.json  .swift-version  Package.resolved  Package.swift  README.md
.github/workflows/: docc.yml  lint.yml  test.yml
BasicGradientDescent/: main.swift
Benchmarks/: README.md
Benchmarks/BuildingSimulation/: README.md
Benchmarks/BuildingSimulation/Haskell/: building-simulation.cabal
Benchmarks/BuildingSimulation/Haskell/app/: Main.hs
Benchmarks/BuildingSimulation/JAX/: JAXSimulator.py
Benchmarks/BuildingSimulation/PyTorch/: PyTorchSimulator.py
Benchmarks/BuildingSimulation/Swift/: main.swift
Benchmarks/BuildingSimulation/TensorFlow/: TensorFlowSimulator.py
Benchmarks/LanguageSuite/: Package.resolved  Package.swift  README.md
Benchmarks/LanguageSuite/Benchmarks/LanguageCoverageBenchmarks/: FuzzedFunctions.swift  LanguageCoverageBenchmarks.swift
Benchmarks/PyTorch/: PyTorchSimulator.py
Benchmarks/TensorFlow/: TensorFlowSimulator.py
CustomDerivatives/: main.swift
Sources/BasicDifferentiation/: main.swift
Sources/BasicGradientDescent/: main.swift
Sources/CustomDerivatives/: main.swift
Sources/DifferentiableSwiftExamplesDocumentation/: EmptyFile.swift  README.md
Sources/DifferentiableSwiftExamplesDocumentation/DifferentiableSwiftExamples.docc/: BasicDifferentiation.md  BasicGradientDescent.md  CustomDerivatives.md  DifferentiableSwiftExamples.md  ManuallyDefinedTangentVectors.md  Setup.md  Sharp edges in differentiable Swift.md  SharpEdgesInDifferentiableSwift.md  UsingDifferentiableSwift.md
(+43 files in other folders)
