cabal-version:      3.0
name:               building-simulation
version:            0.1.0.0
-- synopsis:
-- description:
-- license:            BSD-3-Clause
-- license-file:       LICENSE
author:             Trevor L. McDonell
maintainer:         trevor@passivelogic.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    README.md CHANGELOG.md
-- extra-source-files:

executable building-simulation
    default-language: Haskell2010
    hs-source-dirs:   app

    main-is:          Main.hs
    -- other-modules:

    ghc-options:
      -O2
      -Wall

    build-depends:
        base          ^>= 4.20
      , ad            ^>= 4.5
      , criterion     ^>= 1.6

-- vim: nospell
